# kokiri

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  OldMakefile  README.md  dependencies.lua  meson.build  object.hpp  premake5.lua  wavefront_loader.cpp  wavefront_loader.hpp
3rd/glad/: glob.sh
kokiri/: premake5.lua
kokiri-test/: README.md  application.cpp  premake5.lua
kokiri-test/simple_game/: application_abstracted.cpp  premake5.lua
kokiri-test/simple_window/: application.cpp  premake5.lua
kokiri/src/: kkr.cpp  kkr.hpp
kokiri/src/core/: application.cpp  application.hpp  enum.hpp  event.cpp  event.hpp  functions.hpp  game.cpp  game.hpp  references.hpp  resources.cpp  resources.hpp  scene.cpp  scene.hpp  timer.hpp  types.hpp  window.cpp  window.hpp
kokiri/src/core/debug/: colors.hpp  log.hpp
kokiri/src/core/ecs/: component.cpp  component.hpp  entity.cpp  entity.hpp
kokiri/src/core/sound/: sound.cpp  sound.hpp  track.cpp  track.hpp
kokiri/src/core/utils/: enum.hpp  hasher.hpp  strings.hpp
kokiri/src/graphics/: window.cpp  window.hpp
kokiri/src/graphics/opengl/: context.cpp  context.hpp  renderer2d.cpp  renderer2d.hpp  shader.cpp  shader.hpp
kokiri/src/graphics/sdl/: camera.cpp  camera.hpp  camera_follower.cpp  camera_follower.hpp  renderer.cpp  renderer.hpp  renderer2d.cpp  renderer2d.hpp  sprite.cpp  sprite.hpp  tilemap.cpp  tilemap.hpp  tileset.cpp  tileset.hpp
kokiri/src/math/: vector2.cpp  vector2.hpp  vector3.hpp
kokiri/src/renderer/: shader.hpp
kokiri/src/renderer/opengl/: context.cpp  context.hpp  opengl.cpp
kokiri/src/sound/: track.cpp  track.hpp
src/: debug.cpp  debug.hpp  main.cpp  object.cpp  object.hpp  object_loader.cpp  object_loader.hpp  opengl_renderer.cpp  opengl_renderer.hpp  renderer.cpp  renderer.hpp  vector3.cpp  vector3.hpp
src/3rd/glad/: glad.c  glad.h
src/core/debug/: debug.hpp  log.hpp
src/graphics/: context.cpp  context.hpp  primitives.cpp  primitives.hpp  renderer.cpp  renderer.hpp  renderer_opengl.cpp  renderer_opengl.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
src/maths/: vector3.cpp  vector3.hpp
src/render/: render.cpp  render.hpp  shader.cpp  shader.hpp  window.hpp
src/render/opengl/: context.cpp  opengl.cpp  opengl.hpp
src/renderer/: renderer.cpp  renderer.hpp  shader.cpp  window.cpp  window.hpp
src/renderer/opengl/: context.cpp  context.hpp  opengl.hpp
src/utils/: loader.cpp  loader.hpp  macros.hpp  object.cpp  object.hpp  object_loader.cpp  object_loader.hpp  object_printer.cpp  object_printer.hpp  printer.cpp  printer.hpp  wavefront_loader.cpp
src/utils/debug/: debug.hpp
src/utils/loaders/: README.org  generic_loader.cpp  generic_loader.hpp  object.cpp  object.hpp  object_loader.cpp  object_loader.hpp
src/utils/printer/: README.org
src/utils/readers/: README.org
test/: meson.build  test_object_reader.cpp  test_window.cpp
