window_src = ['test_window.cpp']

# executable('window_test',
#            window_src,
#            link_with: kokiri_lib,
#            include_directories: lib_header,
#            dependencies : [sys, sdl2])

test_object_reader_src = ['test_object_reader.cpp']

executable('object_reader_test',
            test_object_reader_src,
            link_with: kokiri_lib,
            include_directories: lib_header,
            dependencies: [sys])